@@ -74,6 +74,7 @@ my %translation = (
 	75 => '1. Klasse vorne',
 	76 => '1. Klasse hinten',
 	77 => 'Ohne 1. Klasse',
+	79 => 'Ohne Mehrzweckabteil',
 	80 => 'Abweichende Wagenreihung',
 	82 => 'Mehrere Wagen fehlen',
 	83 => 'Fehlender Zugteil',
@@ -82,17 +83,17 @@ my %translation = (
 	86 => 'Keine Reservierungsanzeige',
 	87 => 'Einzelne Wagen ohne Reservierungsanzeige',
 	88 => 'Keine Qualitätsmängel',  # r 80 82 83 85 86 87 90 91 92 93 96 97 98
-	89 => 'Reservierungen sind wieder vorhanden',
-	90 => 'Kein Bordrestaurant/Bordbistro',
-	91 => 'Eingeschränkte Fahrradmitnahme',
-	92 => 'Klimaanlage in einzelnen Wagen ausgefallen',
-	93 => 'Fehlende oder gestörte behindertengerechte Einrichtung',
-	94 => 'Ersatzbewirtschaftung',
-	95 => 'Ohne behindertengerechtes WC',
-	96 => 'Der Zug ist stark überbesetzt', # r 97
-	97 => 'Der Zug ist überbesetzt', # r 96
-	98 => 'Sonstige Qualitätsmängel',
-	99 => 'Verzögerungen im Betriebsablauf',
+	89  => 'Reservierungen sind wieder vorhanden',
+	90  => 'Kein Bordrestaurant/Bordbistro',
+	91  => 'Eingeschränkte Fahrradmitnahme',
+	92  => 'Klimaanlage in einzelnen Wagen ausgefallen',
+	93  => 'Fehlende oder gestörte behindertengerechte Einrichtung',
+	94  => 'Ersatzbewirtschaftung',
+	95  => 'Ohne behindertengerechtes WC',
+	96  => 'Der Zug ist stark überbesetzt',                            # r 97
+	97  => 'Der Zug ist überbesetzt',                                  # r 96
+	98  => 'Sonstige Qualitätsmängel',
+	99  => 'Verzögerungen im Betriebsablauf',
 	900 => 'Anschlussbus wartet(?)',
 );
 
@@ -706,8 +707,8 @@ sub superseded_messages {
 	my %superseded = (
 		84 => [ 80, 82, 83, 85 ],
 		88 => [ 80, 82, 83, 85, 86, 87, 90, 91, 92, 93, 96, 97, 98 ],
-		96 => [ 97 ],
-		97 => [ 96 ],
+		96 => [97],
+		97 => [96],
 	);
 
 	return @{ $superseded{$msg} // [] };
@@ -1232,6 +1233,10 @@ Source: correlation between IRIS and DB RIS (bahn.de).
 Source: correlation between IRIS and DB RIS (bahn.de).
 
 =item q 77 : "Ohne 1. Klasse"
+
+Source: correlation between IRIS and DB RIS (bahn.de).
+
+=item q 79 : "Ohne Mehrzweckabteil"
 
 Source: correlation between IRIS and DB RIS (bahn.de).
 
