@@ -1,3 +1,7 @@
+git HEAD
+
+    * Result: Add qos code 79 ("Ohne Mehrzweckabteil")
+
 Travel::Status::DE::IRIS 1.03 - Tue Sep 15 2015
 
     * Result: Add info key 900
